# accounting

./: .envrc  .gitignore  Cargo.toml  default.nix  flake.nix  readme.md  rust-shell.nix  shell.nix
app-accounting/: Cargo.toml
app-accounting/src/: analysis.rs  canonical.rs  from_files.rs  main.rs
app-accounting/src/parsing/: deserializers.rs  from_files.rs  ing.rs  mod.rs
app-accounting/src/parsing/deserializers/: date_deserializer.rs  direction.rs  serde_iban.rs
app-accounting/src/processing/: mod.rs  summaries.rs
app-accounting/src/processing/types/: account.rs  mod.rs  transaction.rs
app-accounting/src/state/: mod.rs
lib-rapid-map/: Cargo.toml
lib-rapid-map/src/: lib.rs
reference/: Hierarchy.txt  high-level-design.md  state.txt  transaction.txt
sandbox/csv/: 2024-01.csv
src/: main.rs
src/parsing/: from_files.rs  ing.rs  mod.rs
src/parsing/deserializers/: serde_amount.rs
src/parsing/ing/: ing.rs  mod.rs
src/parsing/types/: date_deserializer.rs  direction.rs  mod.rs
src/processing/: mod.rs  summaries.rs
src/processing/types/: account.rs  mod.rs  transaction.rs
src/state/: state.rs
tauri-accounting/: .envrc  flake.nix  package-lock.json  package.json  shell.nix
tauri-accounting/src/: main.ts
tauri-accounting/src-tauri/: Cargo.toml  tauri.conf.json
tauri-accounting/src-tauri/src/: main.rs
