[package]
name = "accounting"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
csv = "1.3.0"
iban = "0.1.7"
locale = "0.2.2"
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.196", features = ["derive"] }
