[workspace]
members = [
  "app-accounting",
  "lib-rapid-map",
  "tauri-accounting/src-tauri",
]
default-members = [ "app-accounting" ]
resolver = "2"

[workspace.dependencies]
chrono = "0.4.33"
clap = { version = "4.5.2", features = ["derive"] }
color-eyre = "0.6.2"
iban = "0.1.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1"
