[package]
name = "app-accounting"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.33"
clap = { version = "4.5.2", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.3.0"
iban = "0.1.7"
locale = "0.2.2"
regex = "1.10.3"
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.196", features = ["derive"] }
