[package]
name = "app-accounting"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
iban.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools = "0.13"
csv = "1.3.0"
locale = "0.2.2"
regex = "1.10.3"
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
